# kde1-zzplayer

./: AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  config.cache  config.h  config.status  configure  configure.in  libtool  zzplayer.lsm  zzplayer.spec.in
po/: Makefile  Makefile.am  Makefile.in
zzplayer/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  ZZplayer.mpg  main.cpp  mini-zzplayer.xpm  zzplayer.cpp  zzplayer.h  zzplayer.kdelnk  zzplayer.xpm
zzplayer/doc/: Makefile  Makefile.in
zzplayer/doc/en/: Makefile  Makefile.am  Makefile.in  zzplayer-1.html  zzplayer-2.html  zzplayer-3.html  zzplayer.html
zzplayer/pics/: Makefile  Makefile.am  Makefile.in  fullscreen.xpm  open.xpm  pause.xpm  sound.xpm  stop.xpm
